Authority table added